Angular / Nodejs - stories overview component, allow cors for localhost

--- a/Nodejs/package.json
+++ b/Nodejs/package.json
@@ -13,6 +13,7 @@
     "@types/socket.io": "^2.1.13",
     "axios": "^0.21.1",
     "console-stamp": "^0.2.9",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
     "morgan": "^1.10.0",
