--- a/reading-fluency-application/angular.json
+++ b/reading-fluency-application/angular.json
@@ -30,7 +30,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/Build/UnityLoader.js"
+            ]
           },
           "configurations": {
             "production": {
