--- a/Nodejs/package.json
+++ b/Nodejs/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "console-stamp": "^0.2.9",
     "cors": "^2.8.5",
+    "cross-blob": "^2.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
     "morgan": "^1.10.0",
