--- a/reading-fluency-application/package.json
+++ b/reading-fluency-application/package.json
@@ -20,16 +20,14 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@types/recordrtc": "^5.6.3",
-    "@types/socket.io-client": "^1.4.34",
     "bootstrap": "^4.0.0-beta",
     "bootstrap-icons": "^1.3.0",
     "component": "^1.1.0",
     "jquery": "^3.5.1",
-    "ngx-socket-io": "^3.2.0",
     "recordrtc": "^5.6.1",
     "rxjs": "~6.5.4",
     "socket.io-client": "^4.0.0",
-    "socket.io-stream": "^0.9.1",
+    "stream": "0.0.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
