--- a/reading-fluency-application/package.json
+++ b/reading-fluency-application/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.0.0-beta",
     "bootstrap-icons": "^1.3.0",
     "component": "^1.1.0",
+    "get-blob-duration": "^1.2.0",
     "jquery": "^3.5.1",
     "recordrtc": "^5.6.1",
     "rxjs": "~6.5.4",
