--- a/Nodejs/package.json
+++ b/Nodejs/package.json
@@ -10,16 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/socket.io": "^2.1.13",
-    "axios": "^0.21.1",
     "console-stamp": "^0.2.9",
     "cors": "^2.8.5",
-    "cross-blob": "^2.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.18",
-    "morgan": "^1.10.0",
-    "socket.io": "^3.0.5",
-    "socket.io-stream": "^0.9.1"
+    "mongoose": "^5.11.18"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
